# chronicle_beta

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: feature-request.md  retrieval-quality.md  setup-issue.md
docs/: QUICKSTART.md  TROUBLESHOOTING.md  eval.md
eval/: golden_questions.json  golden_questions_real.json  run_eval.py  run_real_eval.py
mcp_server/: server.py
mcp_server/tools/: retrieve_chunks.py
retriever/: core.py
scripts/: embed_and_index.py  install.sh  parser.py
tests/: conftest.py  smoke_test.py  test_embed_and_index.py  test_parser.py  test_retrieve_chunks.py  test_retriever.py
tests/fixtures/: sample_conversations.json
